--- a/_layouts/songs.html
+++ b/_layouts/songs.html
@@ -45,7 +45,7 @@
 
     {%- include footer.html -%}
     <!-- Load SVGuitar library -->
-    <script src="{{ "/assets/js/svguitar.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/libs/svguitar.js" | relative_url }}"></script>
     <!-- Load chord database first -->
     <script src="{{ "/assets/js/chord-database.js" | relative_url }}"></script>
     <!-- Load theme effects -->
