--- a/_layouts/family_tree.html
+++ b/_layouts/family_tree.html
@@ -77,14 +77,14 @@
 
     // Định nghĩa nút expand/collapse với gradient
     const expandIconMale =
-      '<circle cx="125" cy="0" r="10" fill="url(#expandMaleGradient)" stroke="#fff" stroke-width="1"><title>Expand</title></circle>' +
-      '<line x1="118" y1="0" x2="132" y2="0" stroke-width="1" stroke="#fff"></line>' +
-      '<line x1="125" y1="-7" x2="125" y2="7" stroke-width="1" stroke="#fff"></line>';
+      '<circle cx="-10" cy="50" r="10" fill="url(#expandMaleGradient)" stroke="#fff" stroke-width="1"><title>Expand</title></circle>' +
+      '<line x1="-17" y1="50" x2="-3" y2="50" stroke-width="1" stroke="#fff"></line>' +
+      '<line x1="-10" y1="43" x2="-10" y2="57" stroke-width="1" stroke="#fff"></line>';
 
     const expandIconFemale =
-      '<circle cx="125" cy="0" r="10" fill="url(#expandFemaleGradient)" stroke="#fff" stroke-width="1"><title>Expand</title></circle>' +
-      '<line x1="118" y1="0" x2="132" y2="0" stroke-width="1" stroke="#fff"></line>' +
-      '<line x1="125" y1="-7" x2="125" y2="7" stroke-width="1" stroke="#fff"></line>';
+      '<circle cx="-10" cy="50" r="10" fill="url(#expandMaleGradient)" stroke="#fff" stroke-width="1"><title>Expand</title></circle>' +
+      '<line x1="-17" y1="50" x2="-3" y2="50" stroke-width="1" stroke="#fff"></line>' +
+      '<line x1="-10" y1="43" x2="-10" y2="57" stroke-width="1" stroke="#fff"></line>';
 
     // Template cho nam với gradient
     FamilyTree.templates.myHugo_male = Object.assign({}, FamilyTree.templates.myHugo);
@@ -308,6 +308,7 @@
       var options = getOptions();
 
       family = new FamilyTree(document.getElementById('tree'), {
+        orientation: FamilyTree.orientation.left,
         mouseScrool: FamilyTree.none,
         scaleInitial: options.scaleInitial,
         mode: 'dark',
@@ -449,6 +450,15 @@
         console.log('Recently added nodes:', newNodes);
         
         alert('Check console for debug information (F12)');
+      });
+
+      family.onInit(() => {
+        family.collapse(11, [12,24,25,26,27,28,29,30,31,32,33,34,35,36,37]);
+        family.collapse(13, [14,,38,39,40,41,42,43,44]);
+        family.collapse(15, [16,,45,46,47,48,49,50]);
+        family.collapse(20, [21,60,61,62]);
+        family.collapse(22, [23,63,64,65]);
+        family.center(17);
       });
 
       // Load dữ liệu ban đầu
